WebKit1 Clients Are Not Reliably Repainted https://bugs.webkit.org/show_bug.cgi?id=142750 <rdar://problem/20042453>

Reviewed by Simon Fraser.

Source/WebCore:

* page/FrameView.cpp:
(WebCore::FrameView::paintContents): Move "Red Rect" debug painting before
the early return so we can see when this happening in debug builds.
* page/FrameView.h:
(WebCore::FrameView::inPaintableState): Added.

Source/WebKit/mac:

Check with the FrameView to see if we are in an immediately paintable state. If we are not,
mark the view as dirty once the _immediateScrollToPoint operation is complete so that the
region will be painted properly.

* WebView/WebClipView.mm:
(-[WebClipView _immediateScrollToPoint:]):


Canonical link: https://commits.webkit.org/160764@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@181587 268f45cc-cd09-0410-ab3c-d52691b4dbfc